# shenron

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  pr-title-check.yml  protect-main.yaml  python-release.yaml  release-assets.yaml  release-from-main.yaml  release-please.yaml
configs/: Qwen06B-cu126-TP1.yml  Qwen06B-cu129-TP1.yml  Qwen06B-cu130-TP1.yml  Qwen235-A22B-cu129-TP2.yml  Qwen235-A22B-cu129-TP4.yml  Qwen235-A22B-cu130-TP2.yml  Qwen30B-A3B-cu126-TP1.yml  Qwen30B-A3B-cu129-TP1.yml  Qwen30B-A3B-cu129-TP2.yml  Qwen30B-A3B-cu130-TP2.yml  docker-compose.yml
configs/.generated/: onwards_config.json  prometheus.yml  scouter_reporter.env  vllm_start.sh
docker/: Dockerfile.cu126  Dockerfile.cu129  Dockerfile.cu130  Dockerfile.onwards  Dockerfile.prometheus  README.md  docker-compose.yml  entrypoint.sh  entrypoint_example.sh  run_docker.sh  run_docker_compose.sh
docker/entrypoint_samples/: Shenron-0.1.0-B200-Qwen3-VL-235B-FP8-TP2.sh  Shenron-0.1.0-Hopper-Qwen3-VL-235B-FP8-TP8-EP8.sh  Shenron-0.1.0-Qwen0.6B.sh
docker/vllm_samples/: QWEN235VL-FP8-TP4.sh
scripts/: README.md  build-release.sh  bump-version.sh  ci.sh  release.sh
shenron/: __init__.py  __main__.py
src/: core.rs  lib.rs
tests/: test_compose_generation.sh  test_compose_version_matches.sh  test_docker_compose.sh  test_generate_from_config.sh  test_get_command.sh  test_run_docker_compose_dry_run.sh
